k8s/ingress/aws/cozinha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cozinha-ingress
  namespace: default
  labels:
    app: cozinha
    component: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/actuator/health"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/load-balancer-name: "lanchonete-cozinha-alb"
    alb.ingress.kubernetes.io/group.name: "lanchonete-cozinha"
    alb.ingress.kubernetes.io/tags: "Projeto=lanchonete,Servico=cozinha"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cozinha-service
            port:
              number: 8080
