k8s/ingress/aws/pedidos-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pedidos-ingress
  namespace: default
  labels:
    app: pedidos
    component: ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: "/actuator/health"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/load-balancer-name: "lanchonete-pedidos-alb"
    alb.ingress.kubernetes.io/group.name: "lanchonete-pedidos"
    alb.ingress.kubernetes.io/tags: "Projeto=lanchonete,Servico=pedidos"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pedidos-service
            port:
              number: 8080
